--- a/src/app/dashboard/dashboard.module.css
+++ b/src/app/dashboard/dashboard.module.css
@@ -15,7 +15,7 @@
     font-weight: 800;
     margin-bottom: 0.5rem;
     text-align: center;
-    background: linear-gradient(90deg, #7289da, #ff73fa);
+    background: linear-gradient(90deg, #daa472, #ffd373);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
