--- a/src/app/dashboard/[guildId]/player.module.css
+++ b/src/app/dashboard/[guildId]/player.module.css
@@ -718,3 +718,18 @@
       margin: 0 10px;
     }
   }
+  .backButton {
+    background: #7289da00;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+.backButton:hover {
+    background: #5865f2;
+}
