--- a/src/app/announcements/page.module.css
+++ b/src/app/announcements/page.module.css
@@ -1,8 +1,10 @@
 .container {
-    min-height: 100vh;
-    background-color: #121212;
-    color: #ffffff;
-    padding: 1rem;
+  width: 90%;
+  min-width: 320px;  /* 모바일 최소 너비 */
+  max-width: 1200px;
+  margin: 100px auto;
+  padding: 2rem;
+  min-height: 100vh;
   }
   
   .wrapper {
@@ -15,7 +17,6 @@
   }
   
   .title {
-    margin-top: 100px;
     font-size: 2.25rem;
     font-weight: 700;
     margin-bottom: 0.5rem;
